@@ -5,6 +5,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 	Rick Widmer
         - Multiple changes to vpopmaild:
+	    Commands that are not yet implemented say so.
             Blank input lines are not an error in vpopmaild.
             Separate help before and after login in vpopmaild.
     	    Allow 3 tries to login to vpopmaild.
